header z-index issues reslved

--- a/src/style.css
+++ b/src/style.css
@@ -25,17 +25,26 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top:0;
+    z-index: 1000;
+    padding:0 20px;
+}
+aside
+{
+    z-index: 1001;
 }
 
 aside
 {
     position: fixed;
-    top:30vh;
+    top:10vh;
     background-color:black;
     overflow: auto;
     width: 200px;
     color:white;
     transition:0.3s;
+    height: 90vh;
     transform: translateX(-100%);
 }
 aside.active
